--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ section {
             <a href="#" class="active">Home</a>
             <a href="website.html" target="_blank">Portfolio</a>
             <a href="dsfdsf.html" target="_blank">Learn</a>
-            <a href="contact.html" target="_blank">Contact</a>
+            <a href="contactpage.html" target="_blank">Contact</a>
         </nav>
     </header>
 
