--- a/contactpage.html
+++ b/contactpage.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <title>Contact Us</title>
 <style>
    body {
@@ -25,12 +26,53 @@
     margin: 0 auto;
     padding: 20px;
   }
+  
   h1 {
     text-align: center;
   }
   .contact-details {
     margin-top: 20px;
   }
+  /* .social {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.4rem;
+    margin-top: 1.7rem;
+}
+
+.social a {
+    color: #ffffff;
+    font-size: 1rem;
+    border: 1.6px solid #ffffff;
+    border-radius: 50%;
+    padding: .35rem;
+    text-align: center;
+    width: 26px;
+    margin: auto;
+} */
+.social {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.4rem;
+    margin-top: 1.7rem;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+}
+
+.social a {
+    color: #ffffff;
+    font-size: 1rem;
+    border: 1.6px solid #ffffff;
+    border-radius: 50%;
+    padding: .35rem;
+    text-align: center;
+    width: 26px;
+    height: 26px; /* Ensure the buttons have a fixed height */
+    display: flex; /* Make the buttons flex containers */
+    justify-content: center; /* Center the content horizontally */
+    align-items: center; /* Center the content vertically */
+}
+
 </style>
 </head>
 <body>
@@ -41,6 +83,13 @@
       <p><strong>Phone:</strong> 9494477805</p>
       <p><strong>Address:</strong>SASTRA UNIVERSITY,THANJAVUR,TAMILNADU</p>
     </div>
+  </div>
+
+  <div class="social">
+    <a href="https://wa.me/+919494477805"><i class="bi bi-whatsapp"></i></a>
+    <a href="https://www.instagram.com/invites/contact/?i=kyxs3ihwyvw5&utm_content=42xqoh9"><i class="bi bi-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/janapana-abhinavreddy-205217210"><i class="bi bi-linkedin"></i></a>
+    <a href="https://www.facebook.com/janapana.abhinavreddy?mibextid=ZbWKwL"><i class="bi bi-facebook"></i></a>
   </div>
 </body>
 </html>
