--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ section {
         </label>
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="website.html" target="_blank">Portfolio</a>
+            <a href="potofilo.html" target="_blank">Portfolio</a>
             <a href="dsfdsf.html" target="_blank">Learn</a>
             <a href="contactpage.html" target="_blank">Contact</a>
         </nav>
