--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+       <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
     <title>Picture Perfect</title>
     <style>
            * {
@@ -195,7 +197,7 @@ section {
     <section>
         <div class="main">
             <div class="detail"><!---Sarah -->
-                <h1><span style="color:#ffffff;">Hi, It's Me</span> <br> I'm <span style="color:#ffffff;">Abhinav...</span></h1>
+                <h1><span style="color:#ffffff;">Hi, It's Me</span> <br> I'm <span class="text" style="color:#ffffff;"></span></h1>
                 <p> I am a passionate photographer dedicated <br> to capturing
                     the beauty, 
                    emotion,  <br> and essence of the world around us. </p>
@@ -224,6 +226,13 @@ section {
         alert('Welcome,to picture perfect Photography');
     }
     sayWelcome()
+         var typed= new Typed(".text", {
+        strings:["Abhinav..."],
+        typeSpeed: 100,
+        backSpeed: 100,
+        backDelay: 1000,
+        loop:true
+    });
 </script>
 
 
