--- a/potofilo.html
+++ b/potofilo.html
@@ -97,6 +97,7 @@ h2 span {
     padding: 5px 18px;
     text-decoration: none;
     text-transform: capitalize;
+	   border-radius: 13px;
 }
 .ScriptTop li a:hover{
 	background:#5b5b5b;
