--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@ body {
     max-height: 100vh;
     background: url(image/pexels-tyler-lastovich-997443.jpg);
             background-size:  cover; 
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 /*nav */
@@ -118,6 +121,7 @@ section {
             color: #fff;
             text-align: center;
             padding: 1rem;
+            margin-top: auto;
         }
 
 .social a:hover {
