--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!---Log-in-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">   
 
 <head>
     <meta charset="UTF-8">
@@ -22,9 +22,9 @@ body {
     max-height: 100vh;
     background: url(image/pexels-tyler-lastovich-997443.jpg);
             background-size:  cover; 
-    display: flex;
+/*     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100vh; */
 }
 
 /*nav */
@@ -121,7 +121,7 @@ section {
             color: #fff;
             text-align: center;
             padding: 1rem;
-            margin-top: auto;
+/*             margin-top: auto; */
         }
 
 .social a:hover {
