--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
 
     <title>Picture Perfect</title>
     <style>
-           * {
+/*            * {
     margin: 0;
     padding: 0;
 }
-
+ */
 body {
     /* font-family: 'Josefin Sans', sans-serif; */
     font-family: 'Poppins', sans-serif;
     max-height: 100vh;
     background: url(image/pexels-tyler-lastovich-997443.jpg);
             background-size:  cover; 
-/*     display: flex;
-    flex-direction: column;
-    min-height: 100vh; */
+     margin: 0;
+            padding: 0;
+/*   display: flex; */
+/*     flex-direction: column; */
+/*     min-height: 100vh;  */
 }
 
 /*nav */
