--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@ header {
     color: #ffffff;
     text-decoration: none;
 }
+.logo img {
+    width: 100px; /* Adjust the width to your desired size */
+    height: auto;
 
 nav a {
     color: #ffffff;
@@ -183,7 +186,9 @@ section {
 <body>
     <header>
         <div class="logo">
-            <a href="#">Picture Perfect.</a>
+            <a href="#">
+                  <img src="logoofpp.png" alt="PicturePerfect.">
+            </a>
         </div>
         <input type="checkbox" id="click">
         <label for="click" class="mainicon">
