--- a/index.html
+++ b/index.html
@@ -1,32 +1,27 @@
 <!---Log-in-->
 <!DOCTYPE html>
-<html lang="en">   
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-       <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-
+    <link rel="stylesheet" href="/web.css">
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <title>Picture Perfect</title>
     <style>
-/*            * {
+           * {
     margin: 0;
     padding: 0;
 }
- */
+
 body {
     /* font-family: 'Josefin Sans', sans-serif; */
     font-family: 'Poppins', sans-serif;
     max-height: 100vh;
     background: url(image/pexels-tyler-lastovich-997443.jpg);
             background-size:  cover; 
-     margin: 0;
-            padding: 0;
-/*   display: flex; */
-/*     flex-direction: column; */
-/*     min-height: 100vh;  */
 }
 
 /*nav */
@@ -41,17 +36,27 @@ header {
 }
 
 .logo {
-    font-size: 1.3rem;
-    font-weight: 800;
+    font-size: 1rem;
+    font-weight: 600;
+    position: absolute;
+    /* width: 10%;
+    top: 3;
+    left: 0;
+    padding: 1.7rem 1rem; */
+ 
+
 }
+/* .logo img {
+    width: 100px; /* Adjust the width to your desired size */
+    /* height: auto; This maintains the aspect ratio */
+/* }  */
 
 .logo a {
     color: #ffffff;
     text-decoration: none;
+    cursor: pointer;
+    /* animation: slideRight 1s ease forwards; */
 }
-.logo img {
-    width: 100px; /* Adjust the width to your desired size */
-    height: auto;
 
 nav a {
     color: #ffffff;
@@ -60,7 +65,9 @@ nav a {
     font-weight: 600;
     letter-spacing: .7px;
     padding: 1rem;
-    padding: 0.4rem 1rem;
+    /* padding: 0.4rem 1rem; */
+    opacity: 1;
+    /* animation: slideTop .5s ease forwards; */
 }
 
 nav a.active,
@@ -69,6 +76,7 @@ nav a:hover {
     color: #fff;
     border-radius: 1rem;
     transition: all.3s ease-in-out;
+    /* animation: slideTop 1s ease forwards; */
 }
 
 #click {
@@ -83,7 +91,7 @@ nav a:hover {
 
 section {
     margin: 2rem 8.5rem;
-    ;
+    /* align-items: center; */
 }
 
 .main {
@@ -126,7 +134,6 @@ section {
             color: #fff;
             text-align: center;
             padding: 1rem;
-/*             margin-top: auto; */
         }
 
 .social a:hover {
@@ -180,14 +187,38 @@ section {
     }
 
 }
+@keyframes slideRight {
+    0%{
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+@keyframes slideTop {
+    0%{
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+    
+
+
+
     </style>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="#">
-                  <img src="logoofpp.png" alt="PicturePerfect.">
+            <a href="#">PicturePerfect.
+                <!-- <img src="image/logoofpp.png" alt="PicturePerfect."> -->
             </a>
         </div>
         <input type="checkbox" id="click">
@@ -198,9 +229,9 @@ section {
         </label>
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="potofilo.html" target="_blank">Portfolio</a>
-            <a href="dsfdsf.html" target="_blank">Learn</a>
-            <a href="contactpage.html" target="_blank">Contact</a>
+            <a href="website.html">Portfolio</a>
+            <a href="dsfdsf.html">Learn</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
 
@@ -209,6 +240,7 @@ section {
         <div class="main">
             <div class="detail"><!---Sarah -->
                 <h1><span style="color:#ffffff;">Hi, It's Me</span> <br> I'm <span class="text" style="color:#ffffff;"></span></h1>
+                <!-- <h2><span class="text"></span></h2> -->
                 <p> I am a passionate photographer dedicated <br> to capturing
                     the beauty, 
                    emotion,  <br> and essence of the world around us. </p>
@@ -237,7 +269,7 @@ section {
         alert('Welcome,to picture perfect Photography');
     }
     sayWelcome()
-         var typed= new Typed(".text", {
+    var typed= new Typed(".text", {
         strings:["Abhinav..."],
         typeSpeed: 100,
         backSpeed: 100,
