--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ section {
         </label>
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="website.html">Portfolio</a>
+            <a href="potofilo.html">Portfolio</a>
             <a href="dsfdsf.html">Learn</a>
             <a href="contact.html">Contact</a>
         </nav>
