--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ nav a {
     text-decoration: none;
     font-size: .97rem;
     font-weight: 600;
-    letter-spacing: .7px;
+    letter-spacing: -1.3px;
     padding: 1rem;
     /* padding: 0.4rem 1rem; */
     opacity: 1;
