--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ section {
             <a href="#" class="active">Home</a>
             <a href="potofilo.html">Portfolio</a>
             <a href="dsfdsf.html">Learn</a>
-            <a href="contact.html">Contact</a>
+            <a href="contactpage.html">Contact</a>
         </nav>
     </header>
 
