--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
     /* font-family: 'Josefin Sans', sans-serif; */
     font-family: 'Poppins', sans-serif;
     max-height: 100vh;
-    background: url(image/pexels-tyler-lastovich-997443.jpg);
+    background: url(image/website1.jpg);
             background-size:  cover; 
 }
 
