--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body {
     /* font-family: 'Josefin Sans', sans-serif; */
     font-family: 'Poppins', sans-serif;
     max-height: 100vh;
-    background: url(https://github.com/Abhinav21082003/PicturePerfect/blob/main/image/website1.jpeg);
+    background: url(image/website1.jpeg);
             background-size:  cover; 
 }
 
