--- a/dsfdsf.html
+++ b/dsfdsf.html
@@ -14,7 +14,8 @@ body {
     padding: 0;
     background-color: #f4f4f4;
     color: #333;
-    background: image();
+    background: url(image/website1.jpeg);
+    background-size:  cover; 
 
 }
 
