--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/web.css">
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <title>Picture Perfect</title>
     <style>
@@ -22,20 +21,21 @@
             background-size: cover;
         }
 
-        /*nav */
+        /* Header styling */
         header {
             padding: 1.7rem 1rem;
             display: flex;
             justify-content: space-between;
+            align-items: center;
             max-width: 80%;
             margin: auto;
-            align-items: center;
         }
 
         .logo {
-            font-size: 1rem;
+            font-size: 1.3rem;
             font-weight: 600;
-            position: absolute;
+            color: white;
+            z-index: 2;
         }
 
         .logo a {
@@ -44,20 +44,18 @@
             cursor: pointer;
         }
 
+        /* Navigation menu */
         nav {
             display: flex;
-            justify-content: flex-end;
             gap: 1rem;
         }
 
         nav a {
             color: #ffffff;
             text-decoration: none;
-            font-size: .97rem;
+            font-size: 0.97rem;
             font-weight: 600;
-            letter-spacing: -1.3px;
             padding: 1rem;
-            opacity: 1;
         }
 
         nav a.active,
@@ -68,14 +66,17 @@
             transition: all .3s ease-in-out;
         }
 
-        #click {
-            display: none;
-        }
-
+        /* Menu for mobile screens */
         .menu {
             display: none;
         }
 
+        /* Hide checkbox input */
+        #click {
+            display: none;
+        }
+
+        /* Section styling */
         section {
             margin: 2rem 8.5rem;
         }
@@ -122,13 +123,6 @@
             padding: 1rem;
         }
 
-        .social a:hover {
-            color: #fff;
-            background-color: #000000;
-            transition: all .3s ease-in-out;
-            box-shadow: rgb(255, 0, 0);
-        }
-
         .main h1 span:nth-child(1) {
             font-size: 1.5rem;
         }
@@ -140,29 +134,33 @@
         }
 
         /* Responsive Styles */
-        @media only screen and (max-width: 480px) {
+        @media only screen and (max-width: 768px) {
             .menu {
                 display: block;
-                font-size: 1.5rem;
-                font-weight: bold;
-                color: #ffffff;
+                font-size: 2rem;
+                color: white;
+                cursor: pointer;
             }
 
             header {
-                padding: 0.7rem 1rem;
-                align-items: center;
-                max-width: 100%;
+                padding: 1rem;
+                justify-content: space-between;
             }
 
+            /* Hide the nav menu initially */
             nav {
                 position: absolute;
-                top: 75px;
+                top: 65px;
+                right: 0;
+                background-color: rgba(0, 0, 0, 0.9);
                 width: 100%;
-                background-color: rgba(0, 0, 0, 0.8);
-                text-align: center;
+                height: auto;
                 display: none;
+                text-align: center;
+                z-index: 1;
             }
 
+            /* When the checkbox is checked, display the nav */
             #click:checked~nav {
                 display: block;
                 transition: all 0.3s ease;
@@ -170,8 +168,8 @@
 
             nav a {
                 display: block;
-                padding: 0.7rem;
-                font-size: 1rem;
+                padding: 1rem;
+                font-size: 1.2rem;
             }
 
             section {
