--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
         </label>
         <nav>
             <a href="#" class="active">Home</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="learn.html">Learn</a>
-            <a href="contact.html">Contact</a>
+            <a href="potofilo.html">Portfolio</a>
+            <a href="dsfdsf.html">Learn</a>
+            <a href="contactpage.html">Contact</a>
         </nav>
     </header>
 
